--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Menú -->
     <header class="cabecera">
         <img class="cabecera__logo" src="assets/vector.png" alt="Logo">
-        <h1 class="cabecera__titulo">Alura Latam</h1>
+        <h1 class="cabecera__titulo">John Solano</h1>
         <nav class="navegacion">
             <ul class="navegacion__lista">
                 <li class="navegacion__elemento"><a href="#sobre-mi">Sobre mí</a></li>
@@ -33,8 +33,8 @@
     <section class="presentacion">
         <img class="presentacion__foto" src="assets/profile.png" alt="Foto de perfil">
         <div class="presentacion__contenedor">
-            <h2 class="presentacion__titulo">Hola, mi nombre es Alura Latam y construyo páginas web</h2>
-            <p class="presentacion__subtitulo">Soy formada en... lorem ipsum sit amet consectetur y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
+            <h2 class="presentacion__titulo">Hola, mi nombre es John Solano y construyo páginas web</h2>
+            <p class="presentacion__subtitulo">Ingeniero Electrónico de la Universidad del Quindío, en formación como desarrollador en el programa ONE NEXT EDUCATION de Oracle y Alura Latam. Apasionado por la tecnología, enfocado en crear soluciones innovadoras.</p>
             <ul class="redes">
                 <li class="redes__img"><a href="">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
                 <li class="redes__img"><a href="">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
