--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
                 <li class="navegacion__elemento"><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
+        <span class="navegacion__email">john45asb@gmail.com</span>
     </header>
 
     <!-- Sección de Presentación -->
     <section class="presentacion">
         <img class="presentacion__foto" src="assets/profile.png" alt="Foto de perfil">
         <div class="presentacion__contenedor">
-            <h2 class="presentacion__titulo">Hola, mi nombre es John Solano y construyo páginas web</h2>
-            <p class="presentacion__subtitulo">Ingeniero Electrónico de la Universidad del Quindío, en formación como desarrollador en el programa ONE NEXT EDUCATION de Oracle y Alura Latam. Apasionado por la tecnología, enfocado en crear soluciones innovadoras.</p>
+            <h2 class="presentacion__titulo">Hola, mi nombre es John Solano y soy programador front-end</h2>
+            <p class="presentacion__subtitulo">Me forme en la Universidad del Quindío y actualmente  estoy participando en el proyecto Oracle ONE en Alura Latam.</p>
             <ul class="redes">
                 <li class="redes__img"><a href="">Github <img src="assets/arrow.png" alt="Flecha"></a></li>
                 <li class="redes__img"><a href="">Linkedin <img src="assets/arrow.png" alt="Flecha"></a></li>
@@ -47,8 +48,8 @@
     <!-- Sección sobre mí -->
     <section class="sobre-mi" id="sobre-mi">
         <h2 class="sobre-mi__titulo">Sobre mí</h2>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia.</p>
-        <p class="sobre-mi__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.</p>
+        <p class="sobre-mi__texto">Soy ingeniero electrónico de la Universidad del Quindío, especializado en desarrollo full stack y creación de soluciones tecnológicas eficientes. He trabajado en aplicaciones web y sitios dinámicos, combinando diseño atractivo y funcionalidad robusta. Mi experiencia incluye desde interfaces intuitivas hasta arquitecturas escalables, siempre enfocadas en resultados.</p>
+        <p class="sobre-mi__texto">Me apasiona el desarrollo front end y la creación de experiencias de usuario que marquen la diferencia. Con un enfoque en la colaboración interdisciplinaria, aporto creatividad, habilidades técnicas y adaptabilidad para superar desafíos. Mi compromiso es entregar proyectos que transformen ideas en soluciones reales y efectivas.</p>
         <!-- Firma opcional -->
         <img class="sobre-mi__firma" src="assets/signature.png" alt="Firma">
     </section>
@@ -120,24 +121,30 @@
         <h2 class="formacion__titulo">Formación académica</h2>
         <ul class="formacion__lista">
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/ufpr_logo.png" alt="UFPR">
-                <div>
-                    <h3 class="formacion__nombre">Análisis de datos</h3>
-                    <p class="formacion__detalle">2018 - UFPR</p>
+                <div class="formacion__imagen">
+                    <img class="formacion__icono" src="assets/ufpr_logo.png" alt="UFPR">
+                </div>
+                 <div class="formacion__descripcion">
+                    <h3 class="formacion__nombre">Ingeniería Electrónica</h3>
+                    <p class="formacion__detalle">2016 - 2022</p>
                 </div>
             </li>
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/alura_logo.png" alt="Alura">
-                <div>
-                    <h3 class="formacion__nombre">Formación en UX Design</h3>
-                    <p class="formacion__detalle">2019 - Alura</p>
+                <div class="formacion__imagen">
+                    <img class="formacion__icono" src="assets/alura_logo.png" alt="Alura">
+                </div>
+                 <div class="formacion__descripcion">
+                    <h3 class="formacion__nombre">Formación en JavaScript</h3>
+                    <p class="formacion__detalle">2024</p>
                 </div>
             </li>
             <li class="formacion__elemento">
-                <img class="formacion__icono" src="assets/ufrj_logo.png" alt="UFRJ">
-                <div>
-                    <h3 class="formacion__nombre">Posgrado en diseño</h3>
-                    <p class="formacion__detalle">En curso - UFRJ</p>
+                <div class="formacion__imagen">
+                    <img class="formacion__icono" src="assets/ufrj_logo.png" alt="UFRJ">
+                </div>
+                <div class="formacion__descripcion"> 
+                    <h3 class="formacion__nombre">Formación Front End</h3>
+                    <p class="formacion__detalle">2024 - Presente</p>
                 </div>
             </li>
         </ul>
@@ -159,9 +166,17 @@
     <!-- Sección de Contacto -->
     <section class="contacto" id="contacto">
         <h2 class="contacto__titulo">Contacto</h2>
+        <p class="contacto__descripcion">Puedes contactarme a través de este formulario o mis redes sociales.</p>
         <form class="contacto__formulario">
-            <input class="contacto__campo" type="text" placeholder="Nombre">
-            <input class="contacto__campo" type="email" placeholder="Correo Electrónico">
+            <div class="contacto__campo-container">
+                <input id="nombre" class="contacto__campo" type="text" required>
+                <label for="nombre" class="contacto__label">Nombre</label>
+            </div>
+
+            <div class="contacto__campo-container">
+                <input id="email" class="contacto__campo" type="email" required>
+                <label for="email" class="contacto__label">Correo Electrónico</label>
+            </div>
             <textarea class="contacto__campo contacto__campo--textarea" placeholder="Mensaje"></textarea>
             <button class="contacto__boton" type="submit">Enviar</button>
         </form>
